--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -356,6 +356,7 @@
               padding-bottom: 40px;
               padding-right: 0;
               justify-content: center;
+              text-align: center;
 
               img.img-thumbnail {
                 padding: 0;
