Form validation progress

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -536,5 +536,19 @@
         }
       }
     }
+
+    .cart {
+      .cart-item {
+        .item-name {
+          margin-left: 2px;
+        }
+      }
+
+      .cart-summary {
+        .item-name {
+          margin-left: 0;
+        }
+      }
+    }
   }
 }
