--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -223,7 +223,10 @@ body {
     border-left: 0.75px solid rgba(0, 0, 0, 0.25);
     padding-bottom: 30rem;
 
-    .cart-item {
+    .cart-item,
+    .tax,
+    .shipping,
+    .total {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -263,17 +266,17 @@ body {
           border-radius: 50%;
         }
       }
+    }
 
-      .item-name {
-        margin-left: -45px;
-        display: flex;
-        justify-content: space-between;
-      }
+    .item-name {
+      margin-left: -45px;
+      display: flex;
+      justify-content: space-between;
+    }
 
-      .item-price {
-        font-weight: 800;
-        margin-right: 20px;
-      }
+    .item-price {
+      font-weight: 800;
+      margin-right: 20px;
     }
   }
 }
