--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -278,6 +278,12 @@ body {
       font-weight: 800;
       margin-right: 20px;
     }
+
+    .cart-summary {
+      .item-name {
+        margin-left: 0;
+      }
+    }
   }
 }
 
