--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -243,7 +243,14 @@
       .cart {
         padding: 45px 15px;
 
+        .cart-summary {
+          .item-name {
+            margin-left: 10px;
+          }
+        }
         .cart-item {
+          margin-left: 10px;
+
           .item-name {
             margin-left: -30px;
           }
