--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -39,6 +39,117 @@ body {
     }
   }
 
+  // Product Options
+  .order-options {
+    background: #ffffea;
+    padding: 45px 10% 20px;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+
+    .order-options-header {
+      h2 {
+        text-align: center;
+        font-weight: 800;
+      }
+    }
+
+    .options {
+      .row {
+        margin-bottom: 0.5rem;
+
+        .option {
+          background: #fff;
+          border-radius: 5px;
+          line-height: 0.75rem;
+          padding: 0 10%;
+          overflow: hidden;
+
+          &.selected {
+            background: #cdf6e6;
+            border: 3px solid #1db278;
+
+            &:after {
+              content: "";
+              box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
+            }
+          }
+
+          img {
+            height: 150px;
+            width: auto;
+            margin: 15px 0 20px;
+          }
+
+          .special-price {
+            font-size: 0.75rem;
+            margin-bottom: 25px;
+
+            span {
+              color: #ea4841;
+            }
+          }
+
+          .option-cta {
+            text-shadow: none;
+            text-transform: uppercase;
+            font-size: 1rem;
+            width: 80%;
+            padding: 15px 0;
+          }
+
+          &.option-1 {
+            box-shadow: -1px 3px 7px -2px rgba(0, 0, 0, 0.35);
+          }
+
+          &.option-1,
+          &.option-3 {
+            padding: 15px 0;
+            height: 85%;
+            transform: translateY(10px);
+          }
+
+          &.option-2 {
+            padding: 30px 0 20px;
+            box-shadow: 0px 3px 7px -2px rgba(0, 0, 0, 0.35);
+            z-index: 2;
+
+            .corner-ribbon {
+              background: #ea4841;
+              @include cornerRibbon;
+            }
+
+            img {
+              margin-top: 5px;
+            }
+          }
+
+          &.option-3 {
+            box-shadow: 2px 3px 7px -2px rgba(0, 0, 0, 0.35);
+
+            .corner-ribbon {
+              background: #028090;
+              @include cornerRibbon;
+            }
+
+            h5.headline-3 {
+              margin-top: 15px;
+            }
+
+            img {
+              margin-top: -10px;
+              height: 130px;
+            }
+
+            h5 {
+              margin-top: -20px;
+            }
+          }
+        }
+      }
+    }
+  }
+
   // Payment Form
   .form-wrapper {
     padding: 40px 40px 4rem;
