--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -195,16 +195,6 @@ body {
 
     form {
       margin-top: 0.75rem;
-      #hidden-form {
-        div#payment-information {
-          &.form-header {
-            display: flex;
-            .payment-information-copy {
-              margin-left: 15px;
-            }
-          }
-        }
-      }
 
       .form-group {
         position: relative;
@@ -219,6 +209,61 @@ body {
           &#shipping-check {
             position: initial;
             margin-left: 10px;
+          }
+        }
+
+        &.lower-form {
+          position: relative;
+          margin-top: 0.75rem;
+
+          #shipping-cost {
+            position: absolute;
+            top: 0;
+            right: 15px;
+          }
+
+          img {
+            position: initial;
+            margin-left: 10px;
+          }
+
+          .shipping-info {
+            display: flex;
+          }
+
+          .item-name,
+          .item-price {
+            transform: translateY(8px);
+            margin-left: 15px;
+          }
+        }
+
+        &.payment-info {
+          position: relative;
+
+          img.lower-form-icon {
+            position: absolute;
+
+            &#lock-icon {
+              top: 6px;
+              right: 8px;
+            }
+
+            &#question-icon {
+              top: 8px;
+              right: 16px;
+            }
+          }
+        }
+
+        &.col-md-6,
+        &.col-md-3 {
+          .fa-check-circle {
+            position: absolute;
+            top: 10px;
+            right: 18.5px;
+            color: #7fbe24;
+            font-size: 1.1rem;
           }
         }
 
@@ -328,23 +373,42 @@ body {
           .form-header {
             margin-top: 1.75rem;
           }
+        }
+      }
 
-          &.standard-shipping {
-            justify-content: space-between;
-            margin-top: 12px;
-
-            .item-name {
-              margin: 14px 0 0 -47%;
+      #hidden-form {
+        div#payment-information {
+          &.form-header {
+            .payment-information-copy {
+              margin-left: 35px;
             }
 
-            .item-price {
-              margin-top: 14px;
-              margin-right: 20px;
+            .transactions {
+              display: flex;
+
+              p {
+                font-size: 0.75rem;
+                color: #7a7a7a;
+              }
+
+              ul {
+                display: flex;
+                list-style: none;
+                justify-content: flex-end;
+                margin-bottom: 0.5rem;
+
+                img {
+                  width: 35px;
+                  height: 22px;
+                  margin-left: 4px;
+                }
+              }
             }
           }
+        }
 
-          &.card-number {
-          }
+        div#billing-address {
+          margin-top: -16px;
         }
       }
 
