JSON submits after click on 'place order'submit button in the hidden section of the form

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -499,6 +499,12 @@ body {
     }
 
     .cart-summary {
+      &.total {
+        .item-price {
+          font-size: 1.1rem;
+        }
+      }
+
       .item-name {
         margin-left: 0;
       }
