--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -442,6 +442,17 @@ body {
     border-left: 0.75px solid rgba(0, 0, 0, 0.25);
     padding-bottom: 30rem;
 
+    #cart-items {
+      .cart-item {
+        .item-img-border {
+          img.item-img {
+            height: 55px;
+            width: auto;
+          }
+        }
+      }
+    }
+
     .cart-item,
     .tax,
     .shipping,
